formato Datos personales

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     background-color: #1473e6;    color : #4b4b4b,
 }
 .secondary {
-    background-color: #747474,
+    background-color: #ececec,
 }
 .App {
   text-align: center;
