nueva barra divisora

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .primary {
-    background-color: #0a4894fe;    color : #616161,
+    background-color: #0a4894fe;    color : #938f8f,
 }
 .secondary {
     background-color: #ececec;
